# TorchPfaffian

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: build_dist.yml  coverage_badge.yml  docs.yml  publish.yml  tests.yml
archives/: _pfaffian.py  _test_pfaffian.py  pfaffian_perm.py  test_pfaffian.py
docs/: .buildinfo  genindex.html  html_files_list.txt  index.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  torch_pfaffian.html  torch_pfaffian.strategies.html
docs/notebooks/: strategies_benchmark.html
docs/sources/: index.rst.txt  modules.rst.txt  torch_pfaffian.rst.txt  torch_pfaffian.strategies.rst.txt
notebooks/: _strategies_benchmark_helpers.py  strategies_benchmark.ipynb
rust/: Cargo.toml
rust/src/: lib.rs
sphinx/: generate_doc.py
sphinx/source/: conf.py  index.rst  modules.rst
src/torch_pfaffian/: __init__.py
src/torch_pfaffian/strategies/: __init__.py  full_det.py  pfaffian_block_det.py  pfaffian_det.py  pfaffian_fdbpf.py  pfaffian_parlett_reid.py  pfaffian_rust_parlett_reid.py  strategy.py
tests/: __init__.py  configs.py  test_torch_pfaffian.py  test_utils.py
tests/test_strategies/: test_pfaffian_block_det.py  test_pfaffian_det.py  test_pfaffian_fdbpf.py  test_pfaffian_parlett_reid.py  test_pfaffian_rust_parlett_reid.py  test_strategy.py
