[project]
name = "torchpfaffian"
version = "0.0.3"
description = "PyTorch-based Pfaffian computation for skew-symmetric matrices."
authors = [{ name = "Jérémie Gince", email = "gincejeremie@gmail.com" }]
requires-python = ">=3.10,<3.15"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy (>=1.23,<3.0.0)",
    "torch (>=2.1,<3.0.0)",
]
readme = "README.md"

[project.urls]
homepage = "https://github.com/MatchCake/TorchPfaffian"
Documentation = "https://MatchCake.github.io/TorchPfaffian"
Source = "https://github.com/MatchCake/TorchPfaffian"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
testpaths = ["tests"]
addopts = [
    "-n=auto",
    "--cov-branch",
    "--cov=src",
    '--cov-report=xml:tests/.tmp/coverage.xml',
    "--cov-report=term-missing",
    "--durations=10",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.1,<7",
    "pytest-json-report>=1.5,<2",
    "pytest>=8.4,<9",
    "mypy>=1.15,<2",
    "ruff>=0.9,<1",
    "nbmake>=1.5,<2",
    "wheel>=0.45,<0.46",
    "build>=1.4,<2",
    "twine>=6.1,<7",
    "pytest-xdist>=3.7,<4",
    "pytest-timeout>=2.4",
    "pip>=25",
    "pre-commit>=4.5.1",
    "maturin>=1.0,<2",
    "tqdm>=4.68.2",
    "seaborn>=0.13.2",
    "ziglang>=0.16.0",
]
docs = [
    "wheel>=0.45,<0.46",
    "build>=1.4,<2",
    "twine>=6.1,<7",
    "sphinx>=6.2,<6.3",
    "docutils>=0.18,<0.20",
    "sphinx-rtd-theme>=3.0,<4",
    "sphinxcontrib-bibtex>=2.5,<2.6",
    "sphinx-theme~=1.0",
    "groundwork-sphinx-theme>=1.1,<2",
    "karma-sphinx-theme>=0.0.8,<0.0.9",
    "sphinx-mdinclude>=0.6,<0.7",
    "myst-nb>=1.1,<2",
    "ipykernel>=6.29,<7",
    "matplotlib>=3.8,<4",
    "nbconvert>=7.16,<8",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
        { extra = "cu130" },
    ],
]

[project.optional-dependencies]
cpu = [
    "torch (>=2.1.2,<3.0.0)",
]
cu128 = [
    "torch (>=2.1.2,<3.0.0)",
]
cu130 = [
    "torch (>=2.1.2,<3.0.0)",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[build-system]
requires = ["maturin>=1.0,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
manifest-path = "rust/Cargo.toml"
module-name = "torch_pfaffian._rust"
features = ["pyo3/extension-module"]
include = ["src/torch_pfaffian/py.typed"]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    '@(abc\.)?abstractmethod',
]

[tool.coverage.run]
relative_files = true

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.ruff]
line-length = 120
extend-exclude = ["archives"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403", "F405"]
"sphinx/source/conf.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
