[package]
name = "torch_pfaffian_rust"
version = "0.0.1"
edition = "2021"

[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py310", "extension-module"] }
numpy = { version = "0.23", features = ["half"] }
ndarray = "0.16"
num-traits = "0.2"
num-complex = "0.4"
half = { version = "2", features = ["num-traits"] }
rayon = "1"
